[metadata]
name = maxheapq
version = 0.0.4
author = Marshel Abraham
author_email = marshel.abraham@gmail.com
description = Maxheap
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mshelll/maxheap
project_urls =
    Bug Tracker = https://github.com/mshelll/maxheap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src